--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8">
-
-    <style>
-      body {
-        margin: 0px;
-        padding: 0px;
-        overflow: hidden;
-      }
-    </style>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Phaser 3 Typescript Webpack Template</title>
   </head>
   <body>
+    <style>
+      html,
+      body {
+        margin: 0px;
+        height: 100%;
+        overflow: hidden;
+        background-color: white;
+      }
+    </style>
+    <div id="Phaser3"></div>
   </body>
 </html>
