--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Phaser 3 Typescript Webpack Template</title>
-  </head>
-  <body>
+
     <style>
       html,
       body {
         margin: 0px;
+        width: 100%;
         height: 100%;
         overflow: hidden;
-        background-color: white;
+        background-color: blue;
       }
     </style>
+  </head>
+  <body>
     <div id="Phaser3"></div>
   </body>
 </html>
