--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         width: 100%;
         height: 100%;
         overflow: hidden;
-        background-color: blue;
+        background-color: black;
       }
     </style>
   </head>
